# qtpyvcp

./: .buildinfo  .clangd  .gitattributes  .gitignore  .gitmodules  .travis.yml  .trigger.txt  404.html  COPYING.rst  MANIFEST.in  README.md  acknowledgements.html  application.html  compile_commands.json  compile_qt.py  edit_vcp.py  genindex.html  hal.html  index.html  launch_designer.sh  main.py  makefile  matrix  mkdocs.yml  objects.inv  package_dependencies.sh  packages.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  update_notes_develop.html  update_notes_stable.html  vcp_launcher.py  versioneer.py
.doctrees/: 404.doctree  acknowledgements.doctree  application.doctree  environment.pickle  hal.doctree  index.doctree  update_notes_develop.doctree  update_notes_stable.doctree
.doctrees/actions/: action_helpers.doctree  coolant_actions.doctree  index.doctree  machine_actions.doctree  program_actions.doctree  spindle_actions.doctree  tool_actions.doctree
.doctrees/components/: action_buttons.doctree  action_sliders.doctree  backplot.doctree  containers.doctree  index.doctree  stacked_widget.doctree  status_items.doctree  subcallbutton.doctree
.doctrees/configuration/: index.doctree  ini_options.doctree  yml_config.doctree
.doctrees/development/: contribution_guide.doctree  dev_environment.doctree
.doctrees/install/: apt_install.doctree  basic_usage.doctree  bookworm.doctree  build_debs.doctree  bullseye.doctree  dev_install.doctree  index.doctree  prerequisites.doctree  pypi_install.doctree  python2.doctree
.doctrees/plugins/: base_plugins.doctree  clock.doctree  index.doctree  notifications.doctree  positions.doctree  status.doctree  tool_table.doctree
.doctrees/showcase/: index.doctree  lathe_vcps.doctree  mill_vcps.doctree  plasma_vcps.doctree
.doctrees/tools/: editvcp.doctree  index.doctree  qcompile.doctree
.doctrees/tutorials/: first_vcp.doctree  index.doctree  misc.doctree  vcp_template.doctree  widget_rules.doctree
.doctrees/widgets/: base_widget.doctree  index.doctree  menus.doctree  rules.doctree
.github/: copilot-instructions.md
.scripts/: after_remove.sh  build_deb.sh  clean_apt_develop.sh  do_apt_develop.sh  do_release.sh  publish_github_release.sh  publish_pypi_release.sh
.travis/: after_install.sh  do_release.sh  publish_github_release.sh
LICENSES/: MIT.md  PyDM-BSD.md
QtDesigner/Qt5.7.1-Py2.7-64bit/: README.md  install.sh
QtPyVCP/: __init__.py  application.py  core.py  demo.ui  enums.py
QtPyVCP/actions/: __init__.py  base_actions.py  coolant_actions.py  machine_actions.py  program_actions.py  spindle_actions.py  (+1 more)
_modules/: index.html
_sources/: acknowledgements.rst.txt  application.rst.txt  hal.rst.txt  update_notes_stable.rst.txt
_static/: documentation_options.js
actions/: action_helpers.html  coolant_actions.html  index.html  machine_actions.html  program_actions.html  spindle_actions.html  tool_actions.html
audit_reports/: QT6_PORTING_COMPREHENSIVE_FIXLIST_2026-03-02.md  running_notes.rst
components/: action_buttons.html  action_sliders.html  backplot.html  containers.html  index.html  stacked_widget.html  status_items.html  subcallbutton.html
configuration/: index.html  ini_options.html  yml_config.html
debian/: README.Debian  README.source  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  py3dist-overrides  python3-qtpyvcp.postinst.debhelper  python3-qtpyvcp.prerm.debhelper  python3-qtpyvcp.substvars  qtpyvcp.cron.d.ex  qtpyvcp.doc-base.EX  rules  watch.ex
dev_launchers/: Designer for Widgets Test.desktop  Widgets Test Sim.desktop  widgets_test_designer.sh  widgets_test_sim_launcher.sh
development/: contribution_guide.html  dev_environment.html
docs/: Makefile  basic_usage.md  dependencies.md  index.md  installing.md
examples/: README.md  file-chooser.ui  filemanager.ui  multi-spindle.ui  python_only_vcp.py  status-labels.ui  tab.ui  tool-table.ui
html/: .buildinfo  basic_usage.html  configuration.html  genindex.html  index.html  installation (copy 1).html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
install/: apt_install.html  basic_usage.html  bookworm.html  build_debs.html  bullseye.html  dev_install.html  index.html  prerequisites.html  pypi_install.html  python2.html
plugins/: base_plugins.html  clock.html  index.html  notifications.html  positions.html  status.html  tool_table.html
pyqt5designer/: building_libpyqt5.md
qtpyvcp/: __init__.py  __main__.py  _version.py  application.py  core.py  default_config.yml  enums.py  vcp_launcher.py
scripts/: .xsessionrc  after_remove.sh  build_deb.sh  do_release.sh  github_release.sh  install_pypi_deps.sh  launch_designer.sh  publish_github_release.sh  publish_pypi_release.sh
showcase/: index.html  lathe_vcps.html  mill_vcps.html  plasma_vcps.html
sim/: .settings.json  README  brender.ini  core_sim_4.hal  core_sim_5.hal  custom_config.yml  dro.qss  filemanager.ini  hal-widgets.hal  hal-widgets.ini  hal-widgets.ui  hazzy_XYZB.ini  hazzy_XYZCW.ini  hazzy_XYZ_metric.ini  mini.ini  output.py  postgui.hal  probe_basic.ini  qcontrol.ini  qcontrol.ini.expanded  test.qss  test.ui  test1.ui  tester.ui  tool.tbl  ui.qrc  xyz-metric.ini  xyz.ini  xyz.py  xyz.qss  xyz.ui  xyz3s.ini  xyzab.ini  xyzb.ini  xyzcw.ini  xyzy-gantry.ini
src/qtpyvcp/native/backplot_cpp/: CMakeLists.txt  README.md  __init__.py  backplot_bridge_pybind.cpp  backplot_builder.cpp  backplot_builder.h  backplot_types.h  bridge.py
src/qtpyvcp/native/widgets_cpp/gcode_editor/: CMakeLists.txt  gcodeeditor.cpp  gcodeeditor.h  gcodeeditorplugin.cpp  gcodeeditorplugin.h  gcodeeditorplugin.pri  gcodeeditorplugin.pro  gcodehighlighter.cpp  gcodehighlighter.h
tools/: editvcp.html  index.html  qcompile.html
tutorials/: first_vcp.html  index.html  misc.html  vcp_template.html  widget_rules.html
vcp_launcher/: main.py  vcp_launcher.py
widgets/: base_widget.html  index.html  menus.html  rules.html
(+1476 files in other folders)
