[build-system]
requires = ["poetry-core", "versioneer[toml]"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "qtpyvcp"
authors = [
  "Kurt Jacobson <kcjengr@gmail.com>",
  "TurBoss <j.l.toledano.l@gmail.com>",
  "Chris Polanski <lcvette1@gmail.com>",
  "Joco <james@snaggingpixels.com>",
]
description = "Qt and Python based Virtual Control Panel framework for LinuxCNC."
readme = "README.md"
version = "0.0"
packages = [
    { include = "examples", from = "src" },
    { include = "qtpyvcp", from = "src" },
    { include = "video_tests", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.scripts]
qtpyvcp = "qtpyvcp.app:main"
qcompile = "qtpyvcp.tools.qcompile:main"
editvcp = "qtpyvcp.tools.editvcp:main"
plasma_tooldbpipe = "qtpyvcp.tools.plasma_tooldbpipe:main"
plasma_gcode_preprocessor = "qtpyvcp.tools.plasma_gcode_preprocessor:main"
tool_db_backend = "qtpyvcp.tools.tool_db_backend:main"
tbl2qsl = "qtpyvcp.tools.tbl2sql:main"
mini = "examples.mini:main"
brender = "examples.brender:main"
vtk_test = "video_tests.vtk_test:main"
qtpyvcp_test = "video_tests.qtpyvcp_test:main"
widgets_test = "video_tests.widgets_test:main"


[tool.poetry.plugins]


[tool.poetry.plugins."qtpyvcp.example_vcp"]
mini = "examples.mini"
brender = "examples.brender"
actions = "examples.actions"


[tool.poetry.plugins."qtpyvcp.test_vcp"]
vtk_test = "video_tests.vtk_test"
qtpyvcp_test = "video_tests.qtpyvcp_test"
widgets_test = "video_tests.widgets_test"


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "qtpyvcp/_version.py"
versionfile_build = "qtpyvcp/_version.py"
tag_prefix = ""
parentdir_prefix = ""
